# SDL2Core

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/: Button.hpp  CEvent.h  CSurface.h  DEFINITIONS.hpp  Define.hpp  Game.hpp  GameApp.hpp  GameIntroState.hpp  GameState.hpp  GameStateGame.hpp  GameStateManager.hpp  MenuState.hpp  Mouse.hpp  OptionsState.hpp  StartGameState.hpp
src/: Button.cpp  CEvent.cpp  Game.cpp  GameApp.cpp  GameIntroState.cpp  GameState.cpp  GameStateManager.cpp  MenuState.cpp  Mouse.cpp  OptionsState.cpp  StartGameState.cpp  main.cpp
